--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <header>
         This is a header
     </header>
+    <main>
+        This is the main content!
+    </main>
     
 </body>
 </html>
