--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         This is the main content!
     </main>
     <footer id="cool-footer">
-        This is a cool footer that wants CSS
+        This is a cool footer that wants CSS. Add ASAP
     </footer>
     
 </body>
