--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <main>
         This is the main content!
+        This is a page by Steven, Anass and Christoffer
     </main>
     <footer id="cool-footer">
         This is a cool footer that wants CSS. Add ASAP
