--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
         This is the main content!
         this will create a conflict
+        this is the new conflict
     </main>
     <footer id="cool-footer">
         This is a cool footer that wants CSS. Add ASAP
