prova skapa conflict

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         This is the main content!
-        this will create a conflict
+       this can create confilct
         en rad till!
     </main>
     <footer id="cool-footer">
