--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         This is the main content!
        this can create confilct
-      this is a big conflict
+    This is the BIGGEST merge conflict
     </main>
     <footer id="cool-footer">
         This is a cool footer that wants CSS. Add ASAP
